changing status bar icons color

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_sign_in"
+            android:focusable="true"
+            android:clickable="true"
             android:background="@android:color/transparent"
             android:layout_marginTop="40dp"/>
 
