--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
         android:src="@drawable/ic_bank_bh_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/todo" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,12 +27,7 @@
         android:layout_marginTop="40dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
-        <!--<EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:drawableEnd="@drawable/ic_phone_num"
-            android:layout_marginEnd="40dp"/>-->
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/filledTextField"
             android:layout_width="match_parent"
@@ -40,11 +36,12 @@
             android:layout_marginEnd="40dp"
             app:endIconDrawable="@drawable/ic_phone_num"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="Your Phone">
+            android:hint="@string/your_phone">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="phone"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -56,11 +53,12 @@
             android:layout_marginEnd="40dp"
             android:layout_marginTop="30dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="Your Password">
+            android:hint="@string/your_password">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textPassword"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -72,20 +70,28 @@
             android:focusable="true"
             android:clickable="true"
             android:background="@android:color/transparent"
-            android:layout_marginTop="40dp"/>
-
+            android:layout_marginTop="40dp"
+            android:contentDescription="@string/todo" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:id="@+id/fingerprint_layout"
+            android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:textSize="20sp"
             android:textColor="@color/colorPrimaryDark"
-            android:text="Or scan your Thumb to continue"/>
+            android:text="@string/or_scan_your_thumb_to_continue"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:src="@drawable/ic_thumb_print"/>
+            android:src="@drawable/ic_thumb_print"
+            android:contentDescription="@string/todo" />
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
