--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#0D256E</color>
     <color name="colorPrimaryDark">#091948</color>
     <color name="colorAccent">#D10810</color>
+    <color name="colorBackground">#F8F8F8</color>
 </resources>
