--- a/app/src/main/res/drawable/bg_view.xml
+++ b/app/src/main/res/drawable/bg_view.xml
@@ -4,4 +4,6 @@
         android:startColor="#05102F"
         android:endColor="#530606"
         android:angle="0"/>
+    <corners android:radius="5dp"/>
+    <size android:width="2dp"/>
 </shape>
