--- a/app/src/main/res/layout/item_bank_card.xml
+++ b/app/src/main/res/layout/item_bank_card.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_mastercard"
-    android:layout_height="160dp">
+    android:layout_height="150dp"
+    android:layout_margin="15dp">
 
     <ImageView
         android:contentDescription="@string/todo"
